--- a/demo/common-demo.css
+++ b/demo/common-demo.css
@@ -5,5 +5,8 @@
 	padding: 0;
 	margin: 0;
 	}
-body { overflow: hidden;}
+body {
+	overflow: hidden;
+	background-color: #FFF;
+	}
 #container canvas { background-size: contain;}
